added doc, push 3.0.3